--- a/server/public/index.html
+++ b/server/public/index.html
@@ -18,6 +18,9 @@
             <button id="createTask">Create Task</button>
         </div>
 
+        <!-- Need to add a section to update tasks -->
+        
+
         <h2>Current To-Do List</h2>
         <table id="tableWrapper">
             <thead>
