added functionality to only update task

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -19,7 +19,16 @@
         </div>
 
         <!-- Need to add a section to update tasks -->
-        
+        <h1>Update a task in the list</h1>
+        <div>
+            <label for="id">ID</label>
+            <input type="text" id="id-update">
+
+            <label for="task">Task</label>
+            <input type="text" id="task-update">
+
+            <button id="update-button">Update</button>
+        </div>
 
         <h2>Current To-Do List</h2>
         <table id="tableWrapper">
