--- a/server/public/index.html
+++ b/server/public/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>To-Do Application</title>
+        <title class="title">To-Do Application</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./styles/styles.css">
@@ -11,18 +11,18 @@
         <script src="./scripts/client.js"></script>
     </head>
     <body>
-        <h1>Add a task to the list</h1>
+        <h1 class="title">Add a task to the list</h1>
         <div id="addTask">
             <label for="task">Task</label>
             <input type="text" id="task"/>
             <button id="createTask">Create Task</button>
         </div>
 
-        <h2>Current To-Do List</h2>
+        <h2 class="anotherTitle">Current To-Do List</h2>
         <table id="tableWrapper">
             <thead>
                 <tr>
-                    <th>Tasks</th>
+                    <th class="listTask">Tasks</th>
                 </tr>
             </thead>
         <tbody id="tasksTableBody"></tbody>
